[project]
name = "nanoprof"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<=3.14"
dependencies = [
    "kaitaistruct>=0.11",
#   "ujson>=5.10.0",
]

[dependency-groups]
dev = [
    "setuptools>=80",
]

[build-system]
requires = [
    "setuptools>=80",
]

[tool.setuptools]
ext-modules = [
    { name = "nanoprof._sampler", sources = ["src/nanoprof/_sampler.c"] }
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/nanoprof/*.h" },
    { file = "src/nanoprof/*.c" },
]
